# ply-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
example_plys/diverse_field_formats/: doubles_ints.ply  doubles_shorts.ply  floats_ints.ply  floats_shorts.ply
examples/: read_diverse_field_types.rs  read_ply.rs  read_ply_header_only.rs  read_ply_to_structs.rs  write_empty_ply.rs  write_ply.rs
scripts/: generate_diverse_field_types.py
src/: lib.rs  util.rs
src/parser/: mod.rs  ply_grammar.rs
src/ply/: consistency.rs  default_element.rs  key_map.rs  mini_map.rs  mod.rs  ply_data_structure.rs  property.rs
src/writer/: mod.rs
tests/: read.rs  write.rs
