[package]
name = "ply-rs-bw"
version = "0.1.4"
authors = ["Felice Serena <felice@serena-mueller.ch>","Bourumir Wyngs<use@github_to_contact"]
repository = "https://github.com/bourumir-wyngs/ply-rs"
homepage = "https://github.com/bourumir-wyngs/ply-rs"
license = "MIT"
readme = "README.md"
documentation = "https://fluci.github.io/travis_docs/ply-rs/ply_rs/index.html"
description = "Library for reading/writing ascii and binary PLY files."
keywords = [ "ply" ]
categories = [ "encoding", "parsing" ]
build = "build.rs"
exclude = [
    "scripts/*"
]
edition = "2021"

[dependencies]
linked-hash-map = "^0.5.6"
byteorder = "^1.5"
peg = "^0.8.4"

[build-dependencies]
skeptic = "^0.13.7"

[dev-dependencies]
skeptic = "^0.13.7"

[[example]]
name = "read_ply"

[[example]]
name = "write_ply"

[[example]]
name = "read_ply_header_only"

[[example]]
name = "read_ply_to_structs"

[[example]]
name = "write_empty_ply"
